--- a/proj.html
+++ b/proj.html
@@ -12,7 +12,7 @@
     <body>
         <nav id="navbar">
             <div id="navbox">
-                <a id="navlogo" href="index.html"></a>
+                <a id="navlogo" href="index.html" target="_self"></a>
                 <div class="navrack">
                     <a class="navbttns" href="sobre.html" target="_self">sobre</a>
                     <div class="navbttns" style="font-weight: 600;">projectos</div>
@@ -21,8 +21,9 @@
                     <a id="navinsta" href="" target="_blank"></a>
                     <a id="navface" href="" target="_blank"></a>
                     <div class="navlangs" style="font-weight: 600;">PT</div>
-                    <a class="navlangs" target="_self">EN</a>
+                    <a class="navlangs" href="" target="_self">EN</a>
                 </div>
+                <a class="navburger"></a>
             </div>
         </nav>
         <div class="nav_page">
@@ -107,91 +108,81 @@
                     <div class="mprojstxt">Diciplina: Design de Comunicação IV</div>
                 </div>
                 <div id="vst1" class="msprojtitl">subtema 1</div>
-                <div class="proj_tplaygrnd">
-                    <div class="proj_tfence1a">
-                        <a href="suffix_proj.html" class="proj_tbox2" target="_self">
-                            <div class="proj_timg2" style="background-image: url(css/img/patrn2.jpg)"></div>
-                            <div class="proj_ttitl">Suffix</div>
-                            <div class="proj_ttxt">legenda</div>
-                        </a>
-                        <div class="proj_tbox1">
-                            <div class="proj_timg1" style="background-image: url(css/img/patrn3.jpg)"></div>
+                <div class="proj_tplaygrnd1">
+                    <div class="proj_tfence1">
+                        <div class="proj_tbox1a">
+                        <div class="proj_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
                             <div class="proj_ttitl">nome do projecto</div>
                             <div class="proj_ttxt">legenda</div>
                         </div>
-                        <div class="proj_tbox2">
-                            <div class="proj_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
+                        <div class="proj_tbox1a">
+                        <div class="proj_timg1" style="background-image: url(css/img/patrn3.jpg)"></div>
                             <div class="proj_ttitl">nome do projecto</div>
                             <div class="proj_ttxt">legenda</div>
                         </div>
                     </div>
-                    <div class="proj_tfence2a">
-                        <div class="proj_tbox1">
-                            <div class="proj_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
+                    <div class="proj_tfence1">
+                        <div class="proj_tbox2b">
+                        <div class="proj_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
+                            <div class="proj_ttitl">nome do projecto</div>
+                            <div class="proj_ttxt">legenda</div>
+                        </div>
+                        <div class="proj_tbox1b">
+                        <div class="proj_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
                             <div class="proj_ttitl">nome do projecto</div>
                             <div class="proj_ttxt">legenda</div>
                         </div>
                     </div>
-                    <div class="proj_tfence2c">
-                        <div class="proj_tbox2">
-                            <div class="proj_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
+                    <div class="proj_tfence1">
+                        <div class="proj_tbox2c">
+                        <div class="proj_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
                             <div class="proj_ttitl">nome do projecto</div>
                             <div class="proj_ttxt">legenda</div>
                         </div>
                     </div>
                 </div>
                 <div id="vst2" class="msprojtitl">subtema 2</div>
-                <div class="proj_tplaygrnd">
-                    <div class="proj_tfence2a">
-                        <div class="proj_tbox1">
-                            <div class="proj_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
+                <div class="proj_tplaygrnd2">
+                    <div class="proj_tfence2">
+                        <div class="proj_tbox1c">
+                        <div class="proj_timg1" style="background-image: url(css/img/patrn3.jpg)"></div>
+                            <div class="proj_ttitl">nome do projecto</div>
+                            <div class="proj_ttxt">legenda</div>
+                        </div>
+                        <div class="proj_tbox1d">
+                        <div class="proj_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
+                            <div class="proj_ttitl">nome do projecto</div>
+                            <div class="proj_ttxt">legenda</div>
+                        </div>
+                        <div class="proj_tbox2b">
+                        <div class="proj_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
+                            <div class="proj_ttitl">nome do projecto</div>
+                            <div class="proj_ttxt">legenda</div>
+                        </div>
+                        <div class="proj_tbox1a">
+                        <div class="proj_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
                             <div class="proj_ttitl">nome do projecto</div>
                             <div class="proj_ttxt">legenda</div>
                         </div>
                     </div>
-                    <div class="proj_tfence1b">
-                        <div class="proj_tbox1">
-                            <div class="proj_timg1" style="background-image: url(css/img/patrn3.jpg)"></div>
+                    <div class="proj_tfence2">
+                        <div class="proj_tbox2a">
+                        <div class="proj_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
                             <div class="proj_ttitl">nome do projecto</div>
                             <div class="proj_ttxt">legenda</div>
                         </div>
-                        <div class="proj_tbox2">
-                            <div class="proj_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
+                        <div class="proj_tbox1e">
+                        <div class="proj_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
                             <div class="proj_ttitl">nome do projecto</div>
                             <div class="proj_ttxt">legenda</div>
                         </div>
-                    </div>
-                </div>
-                <div class="proj_tplaygrnd">
-                    <div class="proj_tfence1c">
-                        <div class="proj_tbox2">
-                            <div class="proj_timg2" style="background-image: url(css/img/patrn2.jpg)"></div>
+                        <div class="proj_tbox2d">
+                        <div class="proj_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
                             <div class="proj_ttitl">nome do projecto</div>
                             <div class="proj_ttxt">legenda</div>
                         </div>
-                        <div class="proj_tbox1">
-                            <div class="proj_timg1" style="background-image: url(css/img/patrn3.jpg)"></div>
-                            <div class="proj_ttitl">nome do projecto</div>
-                            <div class="proj_ttxt">legenda</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="proj_tplaygrnd">
-                    <div class="proj_tfence2b">
-                        <div class="proj_tbox1">
-                            <div class="proj_timg1" style="background-image: url(css/img/patrn1.jpg)"></div>
-                            <div class="proj_ttitl">nome do projecto</div>
-                            <div class="proj_ttxt">legenda</div>
-                        </div>
-                    </div>
-                    <div class="proj_tfence2d">
-                        <div class="proj_tbox2">
-                            <div class="proj_timg2" style="background-image: url(css/img/patrn3.jpg)"></div>
-                            <div class="proj_ttitl">nome do projecto</div>
-                            <div class="proj_ttxt">legenda</div>
-                        </div>
-                        <div class="proj_tbox1">
-                            <div class="proj_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
+                        <div class="proj_tbox1f">
+                        <div class="proj_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
                             <div class="proj_ttitl">nome do projecto</div>
                             <div class="proj_ttxt">legenda</div>
                         </div>
@@ -236,11 +227,12 @@
         </div>
         <div id="foot">
             <div id="footword">
-            <div class="foottitl">sem destino a</div> 
-            <div class="foottxt">Exposição de finalistas
-            <br>Design de Comunicação 2016/2017
-            <br>Faculdade de Belas Artes
-            </div>
+                <div class="foottitl">Sem destino a</div> 
+                <div class="foottxt">Exposição de Finalistas
+                <br>Design de Comunicação 2016/2017
+                <br>Faculdade de Belas-Artes de Lisboa
+                </div>
+                <a class="foot_ficha" href="fichtec.html" target="_self">ficha técnica</a>
             </div>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
