--- a/sobre.html
+++ b/sobre.html
@@ -12,29 +12,30 @@
     <body>
         <nav id="navbar">
             <div id="navbox">
-                <a id="navlogo" href="index.html"></a>
+                <a id="navlogo" href="index.html" target="_self"></a>
                 <div class="navrack">
-                    <div class="navbttns" style="font-weight: 600;">sobre</div>
+                    <a class="navbttns" href="sobre.html" target="_self">sobre</a>
                     <a class="navbttns" href="proj.html" target="_self">projectos</a>
                     <a class="navbttns" href="expo.html" target="_self">exposição</a>
                     <a class="navbttns" href="agend.html" target="_self">agenda</a>
                     <a id="navinsta" href="" target="_blank"></a>
                     <a id="navface" href="" target="_blank"></a>
                     <div class="navlangs" style="font-weight: 600;">PT</div>
-                    <a class="navlangs" target="_self">EN</a>
+                    <a class="navlangs" href="" target="_self">EN</a>
                 </div>
+                <a class="navburger"></a>
             </div>
         </nav>
         <div class="nav_page">
             <div class="np_bar">
-                <a class="np_logo"></a>
+                <a class="np_logo" href="index.html" target="_self"></a>
                 <a class="np_close">x</a>
             </div>
             <div class="np_cont">
-                <a class="np_butts">sobre</a>
-                <a class="np_butts">projecto</a>
-                <a class="np_butts">exposição</a>
-                <a class="np_butts">agenda</a>
+                <a class="np_butts" href="sobre.html" target="_self">sobre</a>
+                <a class="np_butts" href="proj.html" target="_self">projecto</a>
+                <a class="np_butts" href="expo.html" target="_self">exposição</a>
+                <a class="np_butts" href="agend.html" target="_self">agenda</a>
                 <div class="np_srack">
                     <div class="np_langs" style="font-weight: 600;">PT</div>
                     <a class="np_langs">EN</a>
@@ -57,7 +58,7 @@
             </div>
             <div class="etap_hold">
                 <div class="s_stitl">3 etapas, 3 núcleos</div>
-                <div id="etap_cols">
+                <div class="etap_cols">
                     <div class="etap_col"><div class="s_txt"><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p></div></div>
                     <div class="etap_col">
                         <a class="s_stxt" href="proj.html#desti1" target="_self">partimos</a>
@@ -107,7 +108,7 @@
             <div class="s_hold">
                 <div class="s_titl">os alunos</div>
                 <div id="s_holdnames">
-                    <a class="s_names">Abel Quental</a><a class="s_names">Ana Marta Saraiva</a><a class="s_names">Ana Catarina Santos</a><a class="s_names">Ana Ganilho</a><a class="s_names">Ana Beatriz Nunes</a><a class="s_names">António Santiago</a><a class="s_names">Beatriz Sapata</a><a class="s_names">Carolina Couto</a><a class="s_names">Catarina Barbosa</a><a class="s_names" href="catcorreia.html" target="_self">Catarina Correia</a><a class="s_names">Catarina Serafim</a><a class="s_names">Catarina Sousa</a><a class="s_names">David Santos</a><a class="s_names">Guilherme Soeiro</a><a class="s_names">Inês Brandão</a><a class="s_names">Inês Pedro Borges</a><a class="s_names">Inês Ferreira</a><a class="s_names">Inês Sobral</a><a class="s_names">Joana Amoedo</a><a class="s_names">Joana Lourenço</a><a class="s_names">João Andrade</a><a class="s_names">João Vieira</a><a class="s_names">João Soromenho</a><a class="s_names">José Monteiro</a><a class="s_names">Kevin Ferreira</a><a class="s_names">Leonor Carvalho</a><a class="s_names">Leonor Coelho</a><a class="s_names">Lourenço Stewart</a><a class="s_names">Madalena Almeira</a><a class="s_names">Mafalda Cintra</a><a class="s_names">Mafalda Mota</a><a class="s_names">Maria Malaquias</a><a class="s_names">Mariana Pinhal</a><a class="s_names">Marta Antunes</a><a class="s_names">Matilde Melo</a><a class="s_names">Margarida Gomes da Silva</a><a class="s_names">Patrícia Medeiros</a><a class="s_names">Paulo Dias</a><a class="s_names">Pedro Cartaxana</a><a class="s_names">Raquel Sancho</a><a class="s_names">Rita Nascimento</a><a class="s_names">Rodrigo Silva</a><a class="s_names">Sara Rodrigues</a><a class="s_names">Sara Jorge</a><a class="s_names">Sofia Grilo</a><a class="s_names">Sofia Pega</a><a class="s_names">Tiago Marinho</a>
+                    <a class="s_names">Abel Quental</a><a class="s_names">Ana Marta Saraiva</a><a class="s_names">Ana Catarina Santos</a><a class="s_names">Ana Ganilho</a><a class="s_names">Ana Beatriz Nunes</a><a class="s_names">António Santiago</a><a class="s_names">Beatriz Sapata</a><a class="s_names">Carolina Couto</a><a class="s_names">Catarina Barbosa</a><a class="s_names" href="catcorreia.html" target="_self">Catarina Correia</a><a class="s_names">Catarina Serafim</a><a class="s_names">Catarina Sousa</a><a class="s_names">David Santos</a><a class="s_names">Guilherme Soeiro</a><a class="s_names">Inês Brandão</a><a class="s_names">Inês Pedro Borges</a><a class="s_names">Inês Ferreira</a><a class="s_names">Inês Sobral</a><a class="s_names">Joana Amoedo</a><a class="s_names">Joana Lourenço</a><a class="s_names">João Andrade</a><a class="s_names">João Vieira</a><a class="s_names">João Soromenho</a><a class="s_names">José Monteiro</a><a class="s_names">Kevin Ferreira</a><a class="s_names">Leonor Carvalho</a><a class="s_names">Leonor Coelho</a><a class="s_names">Lourenço Stewart</a><a class="s_names">Madalena Almeira</a><a class="s_names">Mafalda Cintra</a><a class="s_names">Mafalda Mota</a><a class="s_names">Maria Malaquias</a><a class="s_names">Mariana Pinhal</a><a class="s_names">Marta Antunes</a><a class="s_names">Matilde Melo</a><a class="s_names">Margarida Gomes da Silva</a><a class="s_names">Patrícia Medeiros</a><a class="s_names">Paulo Dias</a><a class="s_names">Pedro Cartaxana</a><a class="s_names">Raquel Sancho</a><a class="s_names">Rita Nascimento</a><a class="s_names">Rodrigo Silva</a><a class="s_names">Sara Rodrigues</a><a classs="s_names">Sara Jorge</a><a class="s_names">Sofia Grilo</a><a class="s_names">Sofia Pega</a><a class="s_names">Tiago Marinho</a>
                 </div>
             </div>
             <div class="s_holdficha">
@@ -205,11 +206,12 @@
         </div>
         <div id="foot">
             <div id="footword">
-            <div class="foottitl">sem destino a</div> 
-            <div class="foottxt">Exposição de finalistas
-            <br>Design de Comunicação 2016/2017
-            <br>Faculdade de Belas Artes
-            </div>
+                <div class="foottitl">Sem destino a</div> 
+                <div class="foottxt">Exposição de Finalistas
+                <br>Design de Comunicação 2016/2017
+                <br>Faculdade de Belas-Artes de Lisboa
+                </div>
+                <a class="foot_ficha" href="fichtec.html" target="_self">ficha técnica</a>
             </div>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
