--- a/agend.html
+++ b/agend.html
@@ -113,11 +113,12 @@
         </div>
         <div id="foot">
             <div id="footword">
-            <div class="foottitl">sem destino a</div> 
-            <div class="foottxt">Exposição de finalistas
-            <br>Design de Comunicação 2016/2017
-            <br>Faculdade de Belas Artes
-            </div>
+                <div class="foottitl">Sem destino a</div> 
+                <div class="foottxt">Exposição de Finalistas
+                <br>Design de Comunicação 2016/2017
+                <br>Faculdade de Belas-Artes de Lisboa
+                </div>
+                <a class="foot_ficha" href="fichtec.html" target="_self">ficha técnica</a>
             </div>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
