--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             <div class="np_cont">
                 <a class="np_butts" href="sobre.html" target="_self">sobre</a>
-                <a class="np_butts" href="proj.html" target="_self">projecto</a>
+                <a class="np_butts" href="proj.html" target="_self">projectos</a>
                 <a class="np_butts" href="expo.html" target="_self">exposição</a>
                 <a class="np_butts" href="agend.html" target="_self">agenda</a>
                 <div class="np_srack">
