--- a/proj.html
+++ b/proj.html
@@ -32,10 +32,10 @@
                 <a class="np_close">x</a>
             </div>
             <div class="np_cont">
-                <a class="np_butts">sobre</a>
-                <a class="np_butts">projecto</a>
-                <a class="np_butts">exposição</a>
-                <a class="np_butts">agenda</a>
+                <a class="np_butts" href="sobre.html" target="_self">sobre</a>
+                <div class="np_butts" style="font-weight: 600;">projectos</div>
+                <a class="np_butts" href="expo.html" target="_self">exposição</a>
+                <a class="np_butts" href="agend.html" target="_self">agenda</a>
                 <div class="np_srack">
                     <div class="np_langs" style="font-weight: 600;">PT</div>
                     <a class="np_langs">EN</a>
@@ -110,11 +110,11 @@
                 <div id="vst1" class="msprojtitl">subtema 1</div>
                 <div class="proj_tplaygrnd1">
                     <div class="proj_tfence1">
-                        <div class="proj_tbox1a">
+                        <a class="proj_tbox1a" href="suffix_proj.html" target="_self">
                         <div class="proj_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
-                            <div class="proj_ttitl">nome do projecto</div>
-                            <div class="proj_ttxt">legenda</div>
-                        </div>
+                            <div class="proj_ttitl">Suffix</div>
+                            <div class="proj_ttxt">Catarina Correia<br>Ana Ganilho</div>
+                        </a>
                         <div class="proj_tbox1a">
                         <div class="proj_timg1" style="background-image: url(css/img/patrn3.jpg)"></div>
                             <div class="proj_ttitl">nome do projecto</div>
