--- a/agend.html
+++ b/agend.html
@@ -11,7 +11,7 @@
     <body>
         <nav id="navbar">
             <div id="navbox">
-                <a id="navlogo" href="index.html"></a>
+                <a id="navlogo" href="index.html" target="_self"></a>
                 <div class="navrack">
                     <a class="navbttns" href="sobre.html" target="_self">sobre</a>
                     <a class="navbttns" href="proj.html" target="_self">projectos</a>
@@ -20,20 +20,21 @@
                     <a id="navinsta" href="" target="_blank"></a>
                     <a id="navface" href="" target="_blank"></a>
                     <div class="navlangs" style="font-weight: 600;">PT</div>
-                    <a class="navlangs" target="_self">EN</a>
+                    <a class="navlangs" href="" target="_self">EN</a>
                 </div>
+                <a class="navburger"></a>
             </div>
         </nav>
         <div class="nav_page">
             <div class="np_bar">
-                <a class="np_logo"></a>
+                <a class="np_logo" href="index.html" target="_self"></a>
                 <a class="np_close">x</a>
             </div>
             <div class="np_cont">
-                <a class="np_butts">sobre</a>
-                <a class="np_butts">projecto</a>
-                <a class="np_butts">exposição</a>
-                <a class="np_butts">agenda</a>
+                <a class="np_butts" href="sobre.html" target="_self">sobre</a>
+                <a class="np_butts" href="proj.html" target="_self">projectos</a>
+                <a class="np_butts" href="expo.html" target="_self">exposição</a>
+                <div class="np_butts" style="font-weight:600;">agenda</div>
                 <div class="np_srack">
                     <div class="np_langs" style="font-weight: 600;">PT</div>
                     <a class="np_langs">EN</a>
@@ -48,12 +49,12 @@
             </div>
         </div>
         <div id="agendmain">
-            <div class="age_hold">
+            <div class="age_holda">
                 <div class="age_titl">agenda
                     <a class="age_titllink">download da agenda</a></div>
                 <div class="age_btxt"><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p></div>
             </div>
-            <div class="age_hold">
+            <div class="age_holda">
                 <div class="age_localh">
                     <a class="age_locals1">FBAUL</a>
                     <a class="age_locals2">LxFactory</a>
@@ -65,7 +66,7 @@
                 <div class="age_holdb">
                 <div class="age_holdsec1">
                     <div class="age_actbox1">
-                        <a class="age_actimg" style="background-image: url(css/img/img1.jpg)" href="deareu.html" target="_self">
+                        <a class="age_actimg" style="background-image: url(css/img/img1.jpg)" href="deareu_eve.html" target="_self">
                             <div class="img_over"></div>
                             <div class="age_acttitl">Dear Europe</div>
                         </a>
