--- a/catcorreia.html
+++ b/catcorreia.html
@@ -11,7 +11,7 @@
     <body>
         <nav id="navbar">
             <div id="navbox">
-                <a id="navlogo" href="index.html"></a>
+                <a id="navlogo" href="index.html" target="_self"></a>
                 <div class="navrack">
                     <a class="navbttns" href="sobre.html" target="_self">sobre</a>
                     <a class="navbttns" href="proj.html" target="_self">projectos</a>
@@ -20,20 +20,21 @@
                     <a id="navinsta" href="" target="_blank"></a>
                     <a id="navface" href="" target="_blank"></a>
                     <div class="navlangs" style="font-weight: 600;">PT</div>
-                    <a class="navlangs" target="_self">EN</a>
+                    <a class="navlangs" href="" target="_self">EN</a>
                 </div>
+                <a class="navburger"></a>
             </div>
         </nav>
         <div class="nav_page">
             <div class="np_bar">
-                <a class="np_logo"></a>
+                <a class="np_logo" href="index.html" target="_self"></a>
                 <a class="np_close">x</a>
             </div>
             <div class="np_cont">
-                <a class="np_butts">sobre</a>
-                <a class="np_butts">projecto</a>
-                <a class="np_butts">exposição</a>
-                <a class="np_butts">agenda</a>
+                <a class="np_butts" href="sobre.html" target="_self">sobre</a>
+                <a class="np_butts" href="proj.html" target="_self">projectos</a>
+                <a class="np_butts" href="expo.html" target="_self">exposição</a>
+                <a class="np_butts" href="agend.html" target="_self">agenda</a>
                 <div class="np_srack">
                     <div class="np_langs" style="font-weight: 600;">PT</div>
                     <a class="np_langs">EN</a>
@@ -52,39 +53,39 @@
                 <div class="profl_titl">Catarina Correia</div>
                 <div class="profl_links"><a class="profl_link">www.behance.com/catarinaafcorreia</a><br><a class="profl_link">catarinaafcorreia@gmail.com</a></div>
             </div>
-            <div class="profl_tplaygrnd">
-                <div class="profl_tfence1a">
-                    <div class="profl_tbox2">
-                        <div class="profl_timg2" style="background-image: url(css/img/patrn2.jpg)"></div>
-                        <div class="profl_ttitl">nome do projecto</div>
-                        <div class="profl_ttxt">legenda</div>
-                    </div>
-                    <div class="profl_tbox1">
+            <div class="profl_tplaygrnd1">
+                    <div class="profl_tfence1">
+                        <a class="profl_tbox1a" href="suffix_proj.html" target="_self">
+                        <div class="profl_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
+                            <div class="profl_ttitl">Suffix</div>
+                            <div class="profl_ttxt">Catarina Correia<br>Ana Ganilho</div>
+                        </a>
+                        <div class="profl_tbox1a">
                         <div class="profl_timg1" style="background-image: url(css/img/patrn3.jpg)"></div>
-                        <div class="profl_ttitl">nome do projecto</div>
-                        <div class="profl_ttxt">legenda</div>
+                            <div class="profl_ttitl">nome do projecto</div>
+                            <div class="profl_ttxt">legenda</div>
+                        </div>
                     </div>
-                    <div class="profl_tbox2">
+                    <div class="profl_tfence1">
+                        <div class="profl_tbox2b">
                         <div class="profl_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
-                        <div class="profl_ttitl">nome do projecto</div>
-                        <div class="profl_ttxt">legenda</div>
+                            <div class="profl_ttitl">nome do projecto</div>
+                            <div class="profl_ttxt">legenda</div>
+                        </div>
+                        <div class="profl_tbox1b">
+                        <div class="profl_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
+                            <div class="profl_ttitl">nome do projecto</div>
+                            <div class="profl_ttxt">legenda</div>
+                        </div>
+                    </div>
+                    <div class="profl_tfence1">
+                        <div class="profl_tbox2c">
+                        <div class="profl_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
+                            <div class="profl_ttitl">nome do projecto</div>
+                            <div class="profl_ttxt">legenda</div>
+                        </div>
                     </div>
                 </div>
-                <div class="profl_tfence2a">
-                    <div class="profl_tbox1">
-                        <div class="profl_timg1" style="background-image: url(css/img/patrn2.jpg)">  </div>
-                        <div class="profl_ttitl">nome do projecto</div>
-                        <div class="profl_ttxt">legenda</div>
-                    </div>
-                </div>
-                <div class="profl_tfence2c">
-                    <div class="profl_tbox2">
-                        <div class="profl_timg2" style="background-image: url(css/img/patrn1.jpg)">  </div>
-                    <div class="profl_ttitl">nome do projecto</div>
-                        <div class="profl_ttxt">legenda</div>
-                    </div>
-                </div>
-            </div>
         </div>
         <div id="foot">
             <div id="footword">
