--- a/fichtec.html
+++ b/fichtec.html
@@ -10,15 +10,6 @@
         <link rel="icon" href="css/img/sda_icon.png" type="image/x-icon">
     </head>
     <body>
-        <!-- FaceWidget -->
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/fb_LT/sdk.js#xfbml=1&version=v2.10";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
         <nav id="navbar">
             <div id="navbox">
                 <a id="navlogo" href="index.html" target="_self"></a>
@@ -42,7 +33,7 @@
             </div>
             <div class="np_cont">
                 <a class="np_butts" href="sobre.html" target="_self">sobre</a>
-                <a class="np_butts" href="proj.html" target="_self">projecto</a>
+                <a class="np_butts" href="proj.html" target="_self">projectos</a>
                 <a class="np_butts" href="expo.html" target="_self">exposição</a>
                 <a class="np_butts" href="agend.html" target="_self">agenda</a>
                 <div class="np_srack">
@@ -158,6 +149,7 @@
                 <br>Design de Comunicação 2016/2017
                 <br>Faculdade de Belas-Artes de Lisboa
                 </div>
+                <a class="foot_ficha" href="fichtec.html" target="_self">ficha técnica</a>
             </div>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
