--- a/sobre.html
+++ b/sobre.html
@@ -14,7 +14,7 @@
             <div id="navbox">
                 <a id="navlogo" href="index.html" target="_self"></a>
                 <div class="navrack">
-                    <a class="navbttns" href="sobre.html" target="_self">sobre</a>
+                    <div class="navbttns" style="font-weight: 600;">sobre</div>
                     <a class="navbttns" href="proj.html" target="_self">projectos</a>
                     <a class="navbttns" href="expo.html" target="_self">exposição</a>
                     <a class="navbttns" href="agend.html" target="_self">agenda</a>
@@ -32,8 +32,8 @@
                 <a class="np_close">x</a>
             </div>
             <div class="np_cont">
-                <a class="np_butts" href="sobre.html" target="_self">sobre</a>
-                <a class="np_butts" href="proj.html" target="_self">projecto</a>
+                <div class="np_butts" style="font-weight: 600;">sobre</div>
+                <a class="np_butts" href="proj.html" target="_self">projectos</a>
                 <a class="np_butts" href="expo.html" target="_self">exposição</a>
                 <a class="np_butts" href="agend.html" target="_self">agenda</a>
                 <div class="np_srack">
