--- a/suffix_proj.html
+++ b/suffix_proj.html
@@ -9,18 +9,9 @@
         <link rel="icon" href="css/img/sda_icon.png" type="image/x-icon">
     </head>
     <body>
-        <!-- FaceWidget -->
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/fb_LT/sdk.js#xfbml=1&version=v2.10";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
         <nav id="navbar">
             <div id="navbox">
-                <a id="navlogo" href="index.html"></a>
+                <a id="navlogo" href="index.html" target="_self"></a>
                 <div class="navrack">
                     <a class="navbttns" href="sobre.html" target="_self">sobre</a>
                     <a class="navbttns" href="proj.html" target="_self">projectos</a>
@@ -31,18 +22,19 @@
                     <div class="navlangs" style="font-weight: 600;">PT</div>
                     <a class="navlangs" href="" target="_self">EN</a>
                 </div>
+                <a class="navburger"></a>
             </div>
         </nav>
         <div class="nav_page">
             <div class="np_bar">
-                <a class="np_logo"></a>
+                <a class="np_logo" href="index.html" target="_self"></a>
                 <a class="np_close">x</a>
             </div>
             <div class="np_cont">
                 <a class="np_butts" href="sobre.html" target="_self">sobre</a>
-                <a class="np_butts">projecto</a>
-                <a class="np_butts">exposição</a>
-                <a class="np_butts">agenda</a>
+                <a class="np_butts" href="proj.html" target="_self">projectos</a>
+                <a class="np_butts" href="expo.html" target="_self">exposição</a>
+                <a class="np_butts" href="agend.html" target="_self">agenda</a>
                 <div class="np_srack">
                     <div class="np_langs" style="font-weight: 600;">PT</div>
                     <a class="np_langs">EN</a>
@@ -104,11 +96,12 @@
         </div>
         <div id="foot">
             <div id="footword">
-            <div class="foottitl">Sem destino a</div> 
-            <div class="foottxt">Exposição de Finalistas
-            <br>Design de Comunicação 2016/2017
-            <br>Faculdade de Belas-Artes de Lisboa
-            </div>
+                <div class="foottitl">Sem destino a</div> 
+                <div class="foottxt">Exposição de Finalistas
+                <br>Design de Comunicação 2016/2017
+                <br>Faculdade de Belas-Artes de Lisboa
+                </div>
+                <a class="foot_ficha" href="fichtec.html" target="_self">ficha técnica</a>
             </div>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
