--- a/deareu_eve.html
+++ b/deareu_eve.html
@@ -60,7 +60,7 @@
     <body>
         <nav id="navbar">
             <div id="navbox">
-                <a id="navlogo" href="index.html"></a>
+                <a id="navlogo" href="index.html" target="_self"></a>
                 <div class="navrack">
                     <a class="navbttns" href="sobre.html" target="_self">sobre</a>
                     <a class="navbttns" href="proj.html" target="_self">projectos</a>
@@ -69,20 +69,21 @@
                     <a id="navinsta" href="" target="_blank"></a>
                     <a id="navface" href="" target="_blank"></a>
                     <div class="navlangs" style="font-weight: 600;">PT</div>
-                    <a class="navlangs" target="_self">EN</a>
+                    <a class="navlangs" href="" target="_self">EN</a>
                 </div>
+                <a class="navburger"></a>
             </div>
         </nav>
         <div class="nav_page">
             <div class="np_bar">
-                <a class="np_logo"></a>
+                <a class="np_logo" href="index.html" target="_self"></a>
                 <a class="np_close">x</a>
             </div>
             <div class="np_cont">
-                <a class="np_butts">sobre</a>
-                <a class="np_butts">projecto</a>
-                <a class="np_butts">exposição</a>
-                <a class="np_butts">agenda</a>
+                <a class="np_butts" href="sobre.html" target="_self">sobre</a>
+                <a class="np_butts" href="proj.html" target="_self">projectos</a>
+                <a class="np_butts" href="expo.html" target="_self">exposição</a>
+                <a class="np_butts" href="agend.html" target="_self">agenda</a>
                 <div class="np_srack">
                     <div class="np_langs" style="font-weight: 600;">PT</div>
                     <a class="np_langs">EN</a>
@@ -112,7 +113,7 @@
                     <div class="eve_leg1">Happy Timmy</div>
                 </div>
             </div>
-            <div class="evesec">
+            <div class="eveseci">
                 <div class="evesecl">
                     <div class="eve_ibox1">
                         <div id="eve_img1"></div>
@@ -134,14 +135,45 @@
                     <div class="eve_leg3">Plotting Timmy</div>
                 </div>
             </div>
+            <div class="slideshow-container">
+                <div class="mySlides fade">
+                    <img src="css/img/img1.jpg" style="width:100%">
+                </div>
+                <div class="mySlides fade">
+                    <img src="css/img/img2.jpg" style="width:100%">
+                </div>
+                <div class="mySlides fade">
+                    <img src="css/img/img3.jpg" style="width:100%">
+                </div>
+                <div class="mySlides fade">
+                    <img src="css/img/img4.jpg" style="width:100%">
+                </div>
+                <div class="mySlides fade">
+                    <img src="css/img/img5.jpg" style="width:100%">
+                </div>
+                <div class="mySlides fade">
+                    <img src="css/img/img6.jpg" style="width:100%">
+                </div>
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                <div class="dot_holder">
+                    <span class="dot" onclick="currentSlide(1)"></span>
+                    <span class="dot" onclick="currentSlide(2)"></span> 
+                    <span class="dot" onclick="currentSlide(3)"></span>
+                    <span class="dot" onclick="currentSlide(4)"></span>
+                    <span class="dot" onclick="currentSlide(5)"></span>
+                    <span class="dot" onclick="currentSlide(6)"></span>
+                </div>
+            </div>
         </div>
         <div id="foot">
             <div id="footword">
-            <div class="foottitl">sem destino a</div> 
-            <div class="foottxt">Exposição de finalistas
-            <br>Design de Comunicação 2016/2017
-            <br>Faculdade de Belas Artes
-            </div>
+                <div class="foottitl">Sem destino a</div> 
+                <div class="foottxt">Exposição de Finalistas
+                <br>Design de Comunicação 2016/2017
+                <br>Faculdade de Belas-Artes de Lisboa
+                </div>
+                <a class="foot_ficha" href="fichtec.html" target="_self">ficha técnica</a>
             </div>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
