--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <div class="navlangs" style="font-weight: 600;">PT</div>
                     <a class="navlangs" href="" target="_self">EN</a>
                 </div>
-                <a class="navburger"></a>
+                <button class="navburger"></button>
             </div>
         </nav>
         <div class="nav_page">
