--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 }(document, 'script', 'facebook-jssdk'));</script>
         <nav id="navbar">
             <div id="navbox">
-                <a id="navlogo" href="index.html" target="_self"></a>
+                <a id="navlogo" href="index.html"></a>
                 <div class="navrack">
                     <a class="navbttns" href="sobre.html" target="_self">sobre</a>
                     <a class="navbttns" href="proj.html" target="_self">projectos</a>
