--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a id="navlogo" href="index.html"></a>
                 <div class="navrack">
                     <a class="navbttns" href="sobre.html" target="_self">sobre</a>
-                    <a class="navbttns" href="proj.html" target="_self">projectos</a>
+                    <a class="navbttns" href="proj.html">projectos</a>
                     <a class="navbttns" href="expo.html" target="_self">exposição</a>
                     <a class="navbttns" href="agend.html" target="_self">agenda</a>
                     <a id="navinsta" href="" target="_blank"></a>
