--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <div class="navlangs" style="font-weight: 600;">PT</div>
                     <a class="navlangs" href="" target="_self">EN</a>
                 </div>
-                <button class="navburger"></button>
+                <a class="navburger"></a>
             </div>
         </nav>
         <div class="nav_page">
@@ -74,9 +74,9 @@
                     </div>
                 </div>
             </div>
-            <div class="playgate">
+            <a class="playgate">
                 <div class="playb"></div>
-            </div>
+            </a>
         </div>
         <div class="main_play">
             <a class="closex">x</a>
