--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </div>
         </div>
         <div class="main_play">
-            <a class="closex">x</a>
+            <div class="closex">x</div>
             <iframe id="main_vid" src="" frameborder="0" height="640" width="360" webkitallowfullscreen movallowfullscreen allowfullscreen data-ready="true" frameborder="0"></iframe>
         </div>
         <div id="hmain_cont">
