--- a/sobre.html
+++ b/sobre.html
@@ -23,13 +23,13 @@
                     <div class="navlangs" style="font-weight: 600;">PT</div>
                     <a class="navlangs" href="" target="_self">EN</a>
                 </div>
-                <a class="navburger"></a>
+                <div class="navburger"></div>
             </div>
         </nav>
         <div class="nav_page">
             <div class="np_bar">
                 <a class="np_logo" href="index.html" target="_self"></a>
-                <a class="np_close">x</a>
+                <div class="np_close">x</div>
             </div>
             <div class="np_cont">
                 <div class="np_butts" style="font-weight: 600;">sobre</div>
@@ -90,8 +90,8 @@
                 <div class="mySlides fade">
                     <img src="css/img/img6.jpg" style="width:100%">
                 </div>
-                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                <div class="prev" onclick="plusSlides(-1)">&#10094;</div>
+                <div class="next" onclick="plusSlides(1)">&#10095;</div>
                 <div class="dot_holder">
                     <span class="dot" onclick="currentSlide(1)"></span>
                     <span class="dot" onclick="currentSlide(2)"></span> 
