--- a/agend.html
+++ b/agend.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -22,13 +23,13 @@
                     <div class="navlangs" style="font-weight: 600;">PT</div>
                     <a class="navlangs" href="" target="_self">EN</a>
                 </div>
-                <a class="navburger"></a>
+                <div class="navburger"></div>
             </div>
         </nav>
         <div class="nav_page">
             <div class="np_bar">
                 <a class="np_logo" href="index.html" target="_self"></a>
-                <a class="np_close">x</a>
+                <div class="np_close">x</div>
             </div>
             <div class="np_cont">
                 <a class="np_butts" href="sobre.html" target="_self">sobre</a>
@@ -56,8 +57,8 @@
             </div>
             <div class="age_holda">
                 <div class="age_localh">
-                    <a class="age_locals1">FBAUL</a>
-                    <a class="age_locals2">LxFactory</a>
+                    <div class="age_locals1">FBAUL</div>
+                    <div class="age_locals2">LxFactory</div>
                 </div>
                 <iframe class="age_localv" src=""></iframe>
             </div>
