--- a/catcorreia.html
+++ b/catcorreia.html
@@ -22,13 +22,13 @@
                     <div class="navlangs" style="font-weight: 600;">PT</div>
                     <a class="navlangs" href="" target="_self">EN</a>
                 </div>
-                <a class="navburger"></a>
+                <div class="navburger"></div>
             </div>
         </nav>
         <div class="nav_page">
             <div class="np_bar">
                 <a class="np_logo" href="index.html" target="_self"></a>
-                <a class="np_close">x</a>
+                <div class="np_close">x</div>
             </div>
             <div class="np_cont">
                 <a class="np_butts" href="sobre.html" target="_self">sobre</a>
