--- a/deareu_eve.html
+++ b/deareu_eve.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -71,13 +72,13 @@
                     <div class="navlangs" style="font-weight: 600;">PT</div>
                     <a class="navlangs" href="" target="_self">EN</a>
                 </div>
-                <a class="navburger"></a>
+                <div class="navburger"></div>
             </div>
         </nav>
         <div class="nav_page">
             <div class="np_bar">
                 <a class="np_logo" href="index.html" target="_self"></a>
-                <a class="np_close">x</a>
+                <div class="np_close">x</div>
             </div>
             <div class="np_cont">
                 <a class="np_butts" href="sobre.html" target="_self">sobre</a>
@@ -153,8 +154,8 @@
                 <div class="mySlides fade">
                     <img src="css/img/img6.jpg" style="width:100%">
                 </div>
-                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                <div class="prev" onclick="plusSlides(-1)">&#10094;</div>
+                <div class="next" onclick="plusSlides(1)">&#10095;</div>
                 <div class="dot_holder">
                     <span class="dot" onclick="currentSlide(1)"></span>
                     <span class="dot" onclick="currentSlide(2)"></span> 
