--- a/expo.html
+++ b/expo.html
@@ -23,13 +23,13 @@
                     <div class="navlangs" style="font-weight: 600;">PT</div>
                     <a class="navlangs" href="" target="_self">EN</a>
                 </div>
-                <a class="navburger"></a>
+                <div class="navburger"></div>
             </div>
         </nav>
         <div class="nav_page">
             <div class="np_bar">
                 <a class="np_logo" href="index.html" target="_self"></a>
-                <a class="np_close">x</a>
+                <div class="np_close">x</div>
             </div>
             <div class="np_cont">
                 <a class="np_butts" href="sobre.html" target="_self">sobre</a>
@@ -151,8 +151,8 @@
                     <img src="css/img/img6.jpg" style="width:100%">
                     <div class="text">sem destino a</div>
                 </div>
-                <a class="prev" onclick="plusSlides2(-1)">&#10094;</a>
-                <a class="next" onclick="plusSlides2(1)">&#10095;</a>
+                <div class="prev" onclick="plusSlides2(-1)">&#10094;</div>
+                <div class="next" onclick="plusSlides2(1)">&#10095;</div>
                 <div class="dot_holder">
                     <span class="dot2" onclick="currentSlide2(1)"></span>
                     <span class="dot2" onclick="currentSlide2(2)"></span> 
