--- a/proj.html
+++ b/proj.html
@@ -23,13 +23,13 @@
                     <div class="navlangs" style="font-weight: 600;">PT</div>
                     <a class="navlangs" href="" target="_self">EN</a>
                 </div>
-                <a class="navburger"></a>
+                <div class="navburger"></div>
             </div>
         </nav>
         <div class="nav_page">
             <div class="np_bar">
                 <a class="np_logo"></a>
-                <a class="np_close">x</a>
+                <div class="np_close">x</div>
             </div>
             <div class="np_cont">
                 <a class="np_butts" href="sobre.html" target="_self">sobre</a>
@@ -65,12 +65,12 @@
                     </div>
                 </div>
             </div>
-            <a class="playgate">
+            <div class="playgate">
                 <div class="playb"></div>
-            </a>
+            </div>
         </div>
         <div class="main_play">
-            <a class="closex">x</a>
+            <div class="closex">x</div>
             <iframe id="main_vid2" src="" frameborder="0" height="640" width="360" webkitallowfullscreen movallowfullscreen allowfullscreen data-ready="true" frameborder="0"></iframe>
         </div>
         <div id="main_proj">
