again.mobile.hotfix

--- a/agend.html
+++ b/agend.html
@@ -46,7 +46,7 @@
                 </div>
             </div>
             <div class="np_foot">
-                <a class="np_back"></a>
+                <div class="np_back"></div>
             </div>
         </div>
         <div id="agendmain">
