--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
             </div>
             <div class="np_foot">
-                <a class="np_back"></a>
+                <div class="np_back"></div>
             </div>
         </div>
         <div id="head_wrap">
@@ -160,14 +160,14 @@
                             <p>Acompanha os próximos eventos na Faculdade de Belas-Artes de Lisboa e no LxFactory.</p>
                         </div>
                     </div>
-                    <a class="hmain_ablk1">
+                    <div class="hmain_ablk1">
                         <div class="hmain_apics" style="background-image: url(css/img/img2.jpg);">
                             <div class="apics_over"></div>
                         </div>
                         <div class="hmain_adate">21 Set.</div>
                         <div class="hmain_atitl">Evento</div>
                         <div class="hmain_attxt">Local</div>
-                    </a>
+                    </div>
                     <div class="hmain_ablk2">
                         <div class="hmain_apics" style="background-image: url(css/img/img5.jpg);">
                         <div class="apics_over"></div>
