--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div id="shirttxt">
                     <div class="headtitl"><b>Exposição de Finalistas de Design de Comunicação</b></div>
                     <div class="headtxt">2016/2017</div>
-                    <div class="headtxt2">Faculdade de Belas-Artes Universidade de Lisboa</div>
+                    <div class="headtxt2">Faculdade de Belas-Artes da Universidade de Lisboa</div>
                     <div class="headdateh">
                         <div class="headdates"><b>FBAUL</b></div> <div class="headdates"><t>2 - 15 Nov</t></div>
                     </div>
@@ -88,8 +88,7 @@
                 <div class="hmain_blkt1">
                     <div class="hmain_blk1">
                         <div class="hmain_btxt1">
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-                            <p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet.</p>
+                            <p>Somos alunos finalistas de Design de Comunicação da Faculdade de Belas-Artes da Universidade de Lisboa e admitimos que ao longo destes três anos de curso e  daqui em diante, caminhamos “Sem destino a”. Deste modo, não sabemos bem como preencher este espaço. Por agora, vamos deixar em branco mas, eventualmente, não nos vão faltar palavras.</p>
                         </div>
                         <a class="hmoreico" href="sobre.html" target="_self">+</a>
                     </div>
@@ -103,20 +102,20 @@
                     <div class="hmain_blk1">
                         <a class="hmain_stxt2" href="proj.html#desti1" target="_self">partimos</a>
                         <div class="hmain_txt">
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                            Os pontos de partida para uma ideia de Europa.
                         </div>
                         <a class="hmain_stxt2" href="proj.html#desti2"target="_self">vamos</a>
                         <div class="hmain_txt">
-                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                            As bases conceptuais e técnicas para o desenvolvimento de um projecto.
                         </div>
                         <a class="hmain_stxt2" href="proj.html#desti3"target="_self">somos</a>
                         <div class="hmain_txt">
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                            Apresentação de uma Europa sem destino, mas não perdida.
                         </div>
                     </div>
                     <div class="hmain_blk2">
                         <div class="hmain_btxt2">
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet.</p>
+                            <p>Neste último ano, os alunos foram livres de explorar diferentes temáticas e técnicas nos seus projectos e exercícios nas várias disciplinas. Deste modo, foi criada a narrativa “Partimos, Vamos, Somos” - enquanto modelo expositivo e linha de pensamento dos alunos, desde as referências iniciais, passando pelos conhecimentos transmitidos pelas diferentes áreas, até ao projecto final sobre uma identidade Europeia colectiva.</p>
                         </div>
                     </div>
                     </div>
@@ -130,8 +129,7 @@
                 <div class="hmain_blkt1">
                     <div class="hmain_blk1">
                         <div class="hmain_btxt1">
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-                            <p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet.</p>
+                            <p>Uma Exposição dividida em dois locais e focada essencialmente no trabalho desenvolvido pela turma ao longo do último ano de Licenciatura em diferentes disciplinas e numa tomada de posição colectiva perante a temática da Europa, baseada em múltiplas referências políticas, sociais e culturais, passadas e presentes, levando-a para fora da Faculdade e connosco, seja qual for o destino.</p>
                         </div>
                         <a class="hmoreico" href="expo.html" target="_self">+</a>
                     </div>
@@ -144,7 +142,7 @@
                     </div>
                     <div class="hmain_blk3">
                         <div class="hmain_btxt2">
-                            <p>A publicação oficial da Exposição está disponível para venda na FBAUL e online.</p>
+                            <p>Publicação oficial da Exposição.<br>Disponível para venda na FBAUL.</p>
                         </div>
                         <a class="hbuylink" href="" target="_blank">
                             <p>comprar</p>
@@ -157,7 +155,7 @@
                 <div class="hmain_blkt3">
                     <div class="hmain_blk1">
                         <div class="hmain_btxt3">
-                            <p>Acompanha os próximos eventos na Faculdade de Belas-Artes de Lisboa e no LxFactory.</p>
+                            <p>Acompanha os próximos eventos na Faculdade de Belas-Artes de Lisboa e no LxFactory!</p>
                         </div>
                     </div>
                     <div class="hmain_ablk1">
