--- a/agend.html
+++ b/agend.html
@@ -71,14 +71,14 @@
                             <div class="img_over"></div>
                             <div class="age_acttitl">Dear Europe</div>
                         </a>
-                        <div class="age_acttxt">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</div>
+                        <div class="age_acttxt"><p>O desafio "Dear Europe" consiste numa série de mensagens concebidas por pessoas de diferentes nacionalidades a quem foi proposto a criação de uma carta política, com os seus meios e métodos próprios, para um destinatário comum - a Europa. Deste modo, partimos das diferenças que separam nacionalidades para pensar em torno da ideia do que nos é comum, através dos mais diversos suportes (vídeo, ilustração, pintura, escultura, cartazes, postais, performances, etc).</p><p>O resultado final deste projecto é apresentado como uma mensagem seja visual, sonora e/ou textual para a Europa, reunindo os trabalhos de diferentes pessoas pertencentes ao meio criativo.</p></div>
                     </div>
                     <div class="age_actbox1">
                         <div class="age_actimg" style="background-image: url(css/img/img3.jpg)">
                             <div class="img_over"></div>
                             <div class="age_acttitl">Põe quanto és no mínimo que fazes - Workshop de Turma</div>
                         </div>
-                        <div class="age_acttxt">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</div>
+                        <div class="age_acttxt"><p>Num período em que andávamos todos mais preocupados com a definição de uma identidade Europeia e com a necessidade da mesma, decidimos deixar certas questões projectuais em standby por uma tarde e reunimos numa sala 47 aspirantes a Designer de Comunicação para que pudessem reflectir sobre a sua individualidade enquanto criadores e autores através de uma composição gráfica manual. Foi um momento de descoberta da identidade criativa de cada um, em que o trabalho e a diversão se sentaram lado a lado para que cada um pudesse reflectir sobre o seu eu e o outro, inclusivamente, a parte de si que considera não se inserir tanto no meio da Faculdade. Reconhecemos que o outro desempenha aqui um papel importante, porque transmite uma tomada de consciência do crescimento colectivo e das várias identidades criadoras que compõem a turma.</p><p>Foi, acima de tudo, um momento para conhecermos um pouco melhor os que partilharam estes 3 anos connosco.</p></div>
                     </div>
                 </div>
                 <div class="age_holdsec1">
@@ -87,7 +87,7 @@
                             <div class="img_over"></div>
                             <div class="age_acttitl">O Fim do Mundo em Cuecas - Typejam Sessions'17</div>
                         </div>
-                        <div class="age_acttxt">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</div>
+                        <div class="age_acttxt"><p>A Typejam Sessions é uma noite de experimentação e exploração gráfica e tipográfica que acontece todos os anos no final do 1º ano da Licenciatura em Design de Comunicação na Faculdade de Belas-Artes. A edição de 2017 focou-se na temática da Europa, desenvolvida pelos alunos finalistas, de maneira a confrontar os alunos de 1º ano com um tema fora da sua zona de conforto e de conhecer outras perspectivas sobre esta identidade que nos é comum, visto que as suas ideias de Europa, por mais simples que pudessem ser, ainda não se agarravam tanto a ideias pré-concebidas.</p><p>Foi, acima de tudo, um momento para conhecermos um pouco melhor os que partilharam estes 3 anos connosco.</p><p>Muito obrigado à turma.</p></div>
                     </div>
                 </div>
                 </div>
