--- a/expo.html
+++ b/expo.html
@@ -62,7 +62,7 @@
                             <div class="expo_datetxtb"><b>LxFactory</b> 23 Nov - 8 Dez</div>
                         </div>
                         <div class="expo_datetxtc">
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+                        <p>LA Exposição "Sem destino a" ganha forma em dois espaços distintos, assumindo em cada um deles uma perspectiva distinta sobre o percurso conceptual, crítico e criativo dos alunos finalistas. A apresentação feita nas Galerias da FBAUL revela-se mais focada na exploração individual que os alunos puderam fazer nas diferentes disciplinas que lhes permite construir o seu próprio caminho enquanto criadores, enquanto autores. Já no LxFactory, a temática da Europa impõe-se em força através do conjunto de projectos desenvolvidos no âmbito da temática explorada ao longo do último semestre. No seu todo, constituem a Exposição de Finalistas de Design De Comunicação de 2017. Sem destino concreto, com muitas vias percorridas e por percorrer, mas com a certeza de que o fim nunca estará próximo. Daqui para a frente, será o começo de uma nova etapa enquanto jovens profissionais, enquanto cidadãos, enquanto europeus, e claro, “Sem destino a”.</p>
                         </div>
                     </div>
                 </div>
@@ -109,7 +109,7 @@
             <div class="expo_holda">
                 <div class="expo_holdb">
                     <div class="expo_datetxtd">
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+                        <p>Colocámos frente a frente o percurso dos alunos ao longo deste último ano de Licenciatura nas diferentes disciplinas e os projectos finais focados na temática Europa, com o objectivo principal de mostrar os trabalhos dos alunos. A narrativa “Partimos, Vamos, Somos” não é seguida à risca em termos espaciais, de maneira a dar a conhecer todas o processo por detrás da construção de uma ideia de Europa. Esta construção e os projectos que giraram em torno da mesma, servem de pretexto para reconhecermos e darmos a conhecer, que necessitamos de outras referências, de outros desafios e de conhecer outras coisas que não se resumem apenas às disciplinas de Projecto. Precisamos de percorrer, procurar, errar e voltar a tentar. O percurso, este encadeamento de ideias, esta teia que se constrói aos poucos, não se encerra neste espaço. Não tem uma conclusão concreta. Ele deve ser levado para fora, deve ser discutido, deve ser difundido sem destino. E assim será.</p>
                     </div>
                     <div class="expo_holde">
                         <a class="expo_choice" href="agend.html" target="_self">
@@ -165,7 +165,7 @@
             <div class="expo_holda">
                 <div class="expo_holdb">
                     <div class="expo_datetxtd">
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+                        <p>Este foi o momento para a Europa se libertar das paredes do convento, onde foi questionada, discutida e explorada desde o início do ano, deixando para trás o carácter de Exposição de Finalistas e apresentando-se enquanto statement colectivo da turma. Todas as inquietações, problemáticas, respostas, análises, histórias e princípios, foram reunidos para criar uma experiência que envolve o visitante no meio de várias questões políticas, sociais, culturais que nos fizeram definir a sua identidade desde os princípios da sua História até à actualidade. Não estamos aqui para dizer como gostávamos que a Europa fosse. Queremos que, neste espaço, todas as questões venham ao de cima de maneira a dar a entender que Europa é e pode vir a ser esta.</p>
                     </div>
                     <div class="expo_holde">
                         <a class="expo_choice" href="agend.html" target="_self">
