--- a/proj.html
+++ b/proj.html
@@ -59,7 +59,7 @@
                         <div id="desti1" class="projbox">
                             <div class="hprojtxtb">
                                 <div class="hprojtitl" style="color: rgb(255,255,255);">partimos</div>
-                                <div class="hprojtxt" style="color: rgb(255,255,255);">You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out.</div>
+                                <div class="hprojtxt" style="color: rgb(255,255,255);">Começámos com uma parede em branco para dar início ao percurso metodológico dos projectos da turma em busca de uma ideia de Europa colectiva, partindo de várias ideias soltas. Toda a exploração e experimentação em torno do tema, são agora levadas para fora da sala de aula com o objectivo de despertar no outro uma reflexão sobre a sua própria identidade enquanto europeu ou não.</div>
                             </div>
                         </div>
                     </div>
@@ -76,34 +76,44 @@
         <div id="main_proj">
         <mh>
             <div class="sidemenu">
-                <a class="ap" href="#desti1">partimos</a>
+                <div class="ap" href="#desti1">partimos</div>
                 <div class="apv">
                     <div class="ap_pm">
-                        <a class="ap" href="#desti2">vamos</a>
+                        <div class="ap" href="#desti2">vamos</div>
                         <div class="ap_plus">+</div>
                         <div class="ap_minus">-</div>
                     </div>
                     <div class="ap2_hold">
                         <div class="ap2_title">temáticas</div>
-                        <a class="ap2" href="#vt1">tema 1</a>
-                        <a class="ap2" href="#vt2">tema 2</a>
-                        <a class="ap2" href="#vt3">tema 3</a>
-                        <a class="ap2" href="#vt4">tema 4</a>
-                        <a class="ap2" href="#vt5">tema 5</a>
-                        <a class="ap2" href="#vt6">tema 6</a>
+                        <div class="ap2" href="#vt1">D.C. IV</div>
+                        <div class="ap2" href="#vt2">A.M. I</div>
+                        <div class="ap2" href="#vt3">A.M. II</div>
+                        <div class="ap2" href="#vt4">D.E. I</div>
+                        <div class="ap2" href="#vt5">D.E. II</div>
+                        <div class="ap2" href="#vt6">F.E.A.</div>
                     </div>
                 </div>
-                <a class="ap" href="#desti3">somos</a>
+                <div class="apv">
+                    <div class="ap_pm">
+                        <div class="ap" href="#desti2">somos</div>
+                        <div class="ap_plus">+</div>
+                        <div class="ap_minus">-</div>
+                    </div>
+                    <div class="ap2_hold">
+                        <div class="ap2_title">temáticas</div>
+                        <div class="ap2" href="#st1">D.C. V</div>
+                    </div>
+                </div>
             </div>
         </mh>
         <div id="proj_cont">
             <div id="desti2" class="projbox">
                 <div class="hprojtxtb">
                     <div class="hprojtitl">vamos</div>
-                    <div class="hprojtxt">You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out.</div>
+                    <div class="hprojtxt">O percurso traçado por cada aluno é caracterizado pelos  interesses, princípios e pensamentos de cada um. As bases que recolheu ao longo deste último ano de Licenciatura, permitiram-lhe explorar novas vias, tanto práticas como conceptuais, e aplicar diferentes conhecimentos e estratégias a vários projectos, levando-os agora consigo para as próximas etapas.</div>
                 </div>
                 <div id="vt1" class="mprojtxtb">
-                    <div class="mprojtitl">tema 1</div>
+                    <div class="mprojtitl">Design de Comunicação IV</div>
                     <div class="mprojtxt">You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out.</div>
                     <div class="mprojstxt">Diciplina: Design de Comunicação IV</div>
                 </div>
@@ -189,7 +199,7 @@
                     </div>
                 </div>
                 <div id="vt2" class="mprojtxtb">
-                    <div class="mprojtitl">tema 2</div>
+                    <div class="mprojtitl">Audiovisuais e Multimédia I</div>
                     <div class="mprojtxt">You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out.</div>
                     <div class="mprojstxt">Diciplina: Design de Comunicação IV</div>
                 </div>
@@ -197,22 +207,22 @@
                 <div class="proj_tplaygrnd">
                 </div>
                 <div id="vt3" class="mprojtxtb">
-                    <div class="mprojtitl">tema 3</div>
+                    <div class="mprojtitl">Audiovisuais e Multimédia II</div>
                     <div class="mprojtxt">You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out.</div>
                     <div class="mprojstxt">Diciplina: Design de Comunicação IV</div>
                 </div>
                 <div id="vt4" class="mprojtxtb">
-                    <div class="mprojtitl">tema 4</div>
+                    <div class="mprojtitl">Design Editorial I</div>
                     <div class="mprojtxt">You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out.</div>
                     <div class="mprojstxt">Diciplina: Design de Comunicação IV</div>
                 </div>
                 <div id="vt5" class="mprojtxtb">
-                    <div class="mprojtitl">tema 5</div>
+                    <div class="mprojtitl">Design Editorial II</div>
                     <div class="mprojtxt">You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out.</div>
                     <div class="mprojstxt">Diciplina: Design de Comunicação IV</div>
                 </div>
                 <div id="vt6" class="mprojtxtb">
-                    <div class="mprojtitl">tema 6</div>
+                    <div class="mprojtitl">Fotografia Estudos Avançados</div>
                     <div class="mprojtxt">You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out.</div>
                     <div class="mprojstxt">Diciplina: Design de Comunicação IV</div>
                 </div>
@@ -220,7 +230,12 @@
             <div id="desti3" class="projbox">
                 <div class="hprojtxtb">
                     <div class="hprojtitl">somos</div>
-                    <div class="hprojtxt">You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out.</div>
+                    <div class="hprojtxt">A Europa foi o nosso mote projectual no semestre final, mas é definitivamente uma ideia que não fica por aqui: estará em constante desenvolvimento, sem destino concreto. Todos os pensamentos, ideias, propostas e inquietações são agora comunicados para todos aqueles que procuram conhecer melhor a identidade europeia nestes tempos agitados que atravessamos.</div>
+                </div>
+                <div id="st1" class="mprojtxtb">
+                    <div class="mprojtitl">Design de Comunicação IV</div>
+                    <div class="mprojtxt">You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out.</div>
+                    <div class="mprojstxt">Diciplina: Design de Comunicação IV</div>
                 </div>
             </div>
             </div>
