--- a/sobre.html
+++ b/sobre.html
@@ -52,9 +52,6 @@
                     <a class="np_social" style="mask-image:url(css/img/instaic.svg);-webkit-mask-image:url(css/img/faceic.svg);"></a>
                 </div>
             </div>
-            <div class="np_foot">
-                <div class="np_back"></div>
-            </div>
         </div>
         <div id="sobremain">
             <div class="s_hold">
@@ -173,7 +170,7 @@
                     <div class="s_holdfsec2">
                         <div class="s_fblks">
                             <div class="s_ftitl">fotografia</div>
-                            <div class="s_ftxt">Catarina Seraphim<br>Mafalda Cintra<br>Leonor Carvalho</div>
+                            <div class="s_ftxt">Catarina Serafim<br>Mafalda Cintra<br>Leonor Carvalho</div>
                         </div>
                         <div class="s_fblks">
                             <div class="s_fblks">
