--- a/expo.html
+++ b/expo.html
@@ -117,11 +117,11 @@
                         <p>Colocámos frente a frente o percurso dos alunos ao longo deste último ano de Licenciatura nas diferentes disciplinas e os projectos finais focados na temática Europa, com o objectivo principal de mostrar os trabalhos dos alunos. A narrativa “Partimos, Vamos, Somos” não é seguida à risca em termos espaciais, de maneira a dar a conhecer todas o processo por detrás da construção de uma ideia de Europa. Esta construção e os projectos que giraram em torno da mesma, servem de pretexto para reconhecermos e darmos a conhecer, que necessitamos de outras referências, de outros desafios e de conhecer outras coisas que não se resumem apenas às disciplinas de Projecto. Precisamos de percorrer, procurar, errar e voltar a tentar. O percurso, este encadeamento de ideias, esta teia que se constrói aos poucos, não se encerra neste espaço. Não tem uma conclusão concreta. Ele deve ser levado para fora, deve ser discutido, deve ser difundido sem destino. E assim será.</p>
                     </div>
                     <div class="expo_holde">
-                        <a class="expo_choice" href="agend.html" target="_self">
+                        <a class="expo_choice1" href="agend.html" target="_self">
                             <div class="expo_choimg" style="background-image: url(css/img/img5.jpg)"><div class="expo_over"></div></div>
                             <div class="expo_chotxt">ver agenda</div>
                         </a>
-                        <div class="expo_choice">
+                        <div class="expo_choice2">
                             <div class="expo_choimg" style="background-image: url(css/img/img3.jpg)"><div class="expo_over"></div></div>
                             <div class="expo_chotxt">visita virtual</div>
                         </div>
@@ -173,11 +173,11 @@
                         <p>Este foi o momento para a Europa se libertar das paredes do convento, onde foi questionada, discutida e explorada desde o início do ano, deixando para trás o carácter de Exposição de Finalistas e apresentando-se enquanto statement colectivo da turma. Todas as inquietações, problemáticas, respostas, análises, histórias e princípios, foram reunidos para criar uma experiência que envolve o visitante no meio de várias questões políticas, sociais, culturais que nos fizeram definir a sua identidade desde os princípios da sua História até à actualidade. Não estamos aqui para dizer como gostávamos que a Europa fosse. Queremos que, neste espaço, todas as questões venham ao de cima de maneira a dar a entender que Europa é e pode vir a ser esta.</p>
                     </div>
                     <div class="expo_holde">
-                        <a class="expo_choice" href="agend.html" target="_self">
+                        <a class="expo_choice1" href="agend.html" target="_self">
                             <div class="expo_choimg" style="background-image: url(css/img/img6.jpg)"><div class="expo_over"></div></div>
                             <div class="expo_chotxt">ver agenda</div>
                         </a>
-                        <div class="expo_choice">
+                        <div class="expo_choice2">
                             <div class="expo_choimg" style="background-image: url(css/img/img7.jpg)"><div class="expo_over"></div></div>
                             <div class="expo_chotxt">visita virtual</div>
                         </div>
